fixed chrome menu misalignment

--- a/themes/hugo-paper/static/css/style.css
+++ b/themes/hugo-paper/static/css/style.css
@@ -143,12 +143,13 @@ pre, code {
 }
 .menu ul {
   display: flex;
-  justify-content: right;
-  flex-direction: row;
+  /* flex-direction: row; */
   align-items: center;
+  justify-content: flex-end;
 }
 
 .menu li {
+
   margin-left: 5%;
   list-style-type: none;
 }
